2002-11-25  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/context.py (ContextException.__init__): Initialize the
	base class.
	* qm/test/result.py (ContextException): Import it.
	(Result.NoteException): Handle ContextExceptions specially.
	* qm/test/target.py (Target.RunTest): But don't do so here.
	* qm/test/text_result_stream.py (TextResultStream.WriteResult):
	Output annotations.
	(TextResultStream._DisplayAnnotations): New method.

2002-11-22  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (Executable.Spawn): Refine previous patch.

	* qm/executable.py (Executable.Spawn): Handle relative pathnames
	in a platform-independent manner.
	(RedirectedExecutable._DoParent): Fix typo.
	
2002-11-20  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/database.py (is_database): Check more carefully.
	* qm/test/text_result_stream.py (TextResultStream._DisplayResult):
	Show annotations for failing tests even in "brief" mode.
	* tests/QMTest/selfdb.py (RegressionDatabase.GetTestIds): Use
	is_database.
	* tests/QMTest/selftest.py (RegTest.Run): Use <pre> tags to tidy
	output.

2002-11-19  Mark Mitchell  <mark@codesourcery.com>

	* README: Update installation instructions.

2002-11-15  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (cPickle): Import it.
	(fcntl): Likewise.
	(select): Likewise.
	(F_GETFD): New constant.
	(F_SETFD): Likewise.
	(FD_CLOEXEC): Likewise.
	(Executable.Spawn): Add exception_pipe parameter.  Return the PID
	of the child.
	(Executable.Run): Create the exception_pipe.
	* qm/platform_unix.py (RunProgramError): Remove.
	(ProgramStoppedError): Likewise.
	(ProgramTerminatedBySignalError): Likewise.
	(replace_program): Likewise.
	(run_program): Likewise.
	(run_program_captured): Likewise.
	* qm/test/classes/process_target.py
	(ProcessTarget.QMTestExecutable): New class.
	(ProcessTarget.Start): Use it.
	* tests/QMTest/selftest.py (RegTest.Run): Use Executable.
	
2002-11-15 Mark Mitchell <mark@codesourcery.com
