@@ -12,7 +12,7 @@
 ########################################################################
 
 ########################################################################
-# imports
+# Imports
 ########################################################################
 
 from   qm.test.result_stream import *
